--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -234,7 +234,7 @@ Exp\_7b & 2018 & 5 & 46 (42) & behav & 2 * 2 * 2 & explicit & words & Simultaneo
 
 We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis.
 
-The raw data were pre-processed using the \texttt{tidyverse} package of r, in which we excluded the practicing trials, invalid trials of each participants, and invalid participant, if there was any R (Version 4.0.2; R Core Team, 2018) and the R-packages \emph{afex} (Version 0.27.2; Singmann, Bolker, Westfall, \& Aust, 2019), \emph{BayesFactor} (Version 0.9.12.4.2; Morey \& Rouder, 2018), \emph{boot} (Version 1.3.25; Davison \& Hinkley, 1997; Gerlanc \& Kirby, 2015), \emph{bootES} (Version 1.2; Gerlanc \& Kirby, 2015), \emph{brms} (Version 2.13.0; Bürkner, 2017, 2018), \emph{coda} (Version 0.19.3; Plummer, Best, Cowles, \& Vines, 2006), \emph{corrplot2017} (Wei \& Simko, 2017), \emph{dplyr} (Version 1.0.0; Wickham et al., 2019), \emph{emmeans} (Version 1.4.8; Lenth, 2019), \emph{forcats} (Version 0.5.0; Wickham, 2019a), \emph{Formula} (Version 1.2.3; Zeileis \& Croissant, 2010), \emph{ggformula} (Version 0.9.4; Kaplan \& Pruim, 2019), \emph{ggplot2} (Version 3.3.2; Wickham, 2016), \emph{ggstance} (Version 0.3.4; Henry, Wickham, \& Chang, 2018), \emph{ggstatsplot} (Patil \& Powell, 2018), \emph{here} (Version 0.1; Müller, 2017), \emph{Hmisc} (Version 4.4.0; Harrell Jr, Charles Dupont, \& others., 2019), \emph{lattice} (Version 0.20.41; Sarkar, 2008), \emph{lme4} (Version 1.1.23; Bates, Mächler, Bolker, \& Walker, 2015), \emph{lsmeans} (Version 2.30.0; Lenth, 2016), \emph{MASS} (Version 7.3.51.6; Venables \& Ripley, 2002), \emph{Matrix} (Version 1.2.18; Bates \& Maechler, 2019), \emph{MBESS} (Kelley, 2018), \emph{mosaic} (Version 1.7.0; Pruim, Kaplan, \& Horton, 2017, 2018), \emph{mosaicData} (Version 0.18.0; Pruim et al., 2018), \emph{multcomp} (Version 1.4.13; Hothorn, Bretz, \& Westfall, 2008), \emph{mvtnorm} (Version 1.1.1; Genz \& Bretz, 2009), \emph{papaja} (Version 0.1.0.9942; Aust \& Barth, 2018), \emph{plyr} (Version 1.8.6; Wickham et al., 2019; Wickham, 2011), \emph{psych} (Version 1.9.12.31; Revelle, 2018), \emph{purrr} (Version 0.3.4; Henry \& Wickham, 2019), \emph{RColorBrewer} (Version 1.1.2; Neuwirth, 2014), \emph{Rcpp} (Version 1.0.4.6; Eddelbuettel \& François, 2011; Eddelbuettel \& Balamuta, 2017), \emph{readr} (Version 1.3.1; Wickham, Hester, \& Francois, 2018), \emph{reshape2} (Version 1.4.4; Wickham, 2007), \emph{stringr} (Version 1.4.0; Wickham, 2019b), \emph{survival} (Version 3.1.12; Terry M. Therneau \& Patricia M. Grambsch, 2000), \emph{TH.data} (Version 1.0.10; Hothorn, 2019), \emph{tibble} (Version 3.0.1; Müller \& Wickham, 2019), \emph{tidyr} (Version 1.1.0; Wickham \& Henry, 2019), and \emph{tidyverse} (Version 1.3.0; Wickham, 2017). Individual experiment's results were analyzed as in Sui et al. (2012), see supplementary materials. More specifically, we analyzed the accuracy performance using a signal detection approach, in which the performance in each match condition was combined with that in the nonmatching condition with the same shape to form a measure of \emph{d'}. Trials without response were coded either as \enquote{miss} (matched trials) or \enquote{false alarm} (mismatched trials). The \emph{d'} were then analyzed using repeated measures analyses of variance (repeated measures ANOVA). The reaction times of accurate trials were also analyzed using repeated measures ANOVA. To control the false positive rate when conducting the post-hoc comparisons, we used Bonferroni correction. See supplementary materials for the results of each experiment's method and results, which included the significance test results, effect size (Bakeman, 2005; Lakens, 2013), and Bayes factor calculated by JASP (Hu, Kong, Wagenmakers, Ly, \& Peng, 2018; Wagenmakers et al., 2018).
+The raw data were pre-processed using the \texttt{tidyverse} package of r, in which we excluded the practicing trials, invalid trials of each participants, and invalid participant, if there was any. Individual experiment's results were analyzed as in Sui et al. (2012), see supplementary materials. More specifically, we analyzed the accuracy performance using a signal detection approach, in which the performance in each match condition was combined with that in the nonmatching condition with the same shape to form a measure of \emph{d'}. Trials without response were coded either as \enquote{miss} (matched trials) or \enquote{false alarm} (mismatched trials). The \emph{d'} were then analyzed using repeated measures analyses of variance (repeated measures ANOVA). The reaction times of accurate trials were also analyzed using repeated measures ANOVA. To control the false positive rate when conducting the post-hoc comparisons, we used Bonferroni correction. See supplementary materials for the results of each experiment's method and results, which included the significance test results, effect size (Bakeman, 2005; Lakens, 2013), and Bayes factor calculated by JASP (Hu, Kong, Wagenmakers, Ly, \& Peng, 2018; Wagenmakers et al., 2018).
 
 To have a better estimation of the effect size, we reported the synthesized results in five parts: valence effect, explicit interaction between valence and self-relevance, implicit interaction between valence and self-relevance, specificity of valence effect, and behavior-questionnaire correlation analysis.
 
@@ -387,62 +387,17 @@ Third, the external moral identity score was correlated with the drift rate of n
 \setlength{\leftskip}{0.5in}
 
 \hypertarget{refs}{}
-\leavevmode\hypertarget{ref-R-papaja}{}%
-Aust, F., \& Barth, M. (2018). \emph{papaja: Create APA manuscripts with R Markdown}. Retrieved from \url{https://github.com/crsh/papaja}
-
 \leavevmode\hypertarget{ref-Bakeman_2015_eff_size}{}%
 Bakeman, R. (2005). Recommended effect size statistics for repeated measures designs. \emph{Behavior Research Methods}, \emph{37}(3), 379--384. Journal Article. \url{https://doi.org/10.3758/BF03192707}
-
-\leavevmode\hypertarget{ref-R-Matrix}{}%
-Bates, D., \& Maechler, M. (2019). \emph{Matrix: Sparse and dense matrix classes and methods}. Retrieved from \url{https://CRAN.R-project.org/package=Matrix}
-
-\leavevmode\hypertarget{ref-R-lme4}{}%
-Bates, D., Mächler, M., Bolker, B., \& Walker, S. (2015). Fitting linear mixed-effects models using lme4. \emph{Journal of Statistical Software}, \emph{67}(1), 1--48. \url{https://doi.org/10.18637/jss.v067.i01}
 
 \leavevmode\hypertarget{ref-Brainard_1997}{}%
 Brainard, D. H. (1997). The psychophysics toolbox. \emph{Spatial Vision}, \emph{10}(4), 433--436. Journal Article.
 
-\leavevmode\hypertarget{ref-R-brms_a}{}%
-Bürkner, P.-C. (2017). brms: An R package for Bayesian multilevel models using Stan. \emph{Journal of Statistical Software}, \emph{80}(1), 1--28. \url{https://doi.org/10.18637/jss.v080.i01}
-
-\leavevmode\hypertarget{ref-R-brms_b}{}%
-Bürkner, P.-C. (2018). Advanced Bayesian multilevel modeling with the R package brms. \emph{The R Journal}, \emph{10}(1), 395--411. \url{https://doi.org/10.32614/RJ-2018-017}
-
 \leavevmode\hypertarget{ref-Cooper_2009_handbook}{}%
 Cooper, H., Hedges, L. V., \& Valentine, J. C. (2009). \emph{The handbook of research synthesis and meta-analysis} (2nd ed.). Book, New York: Sage.
 
-\leavevmode\hypertarget{ref-R-boot}{}%
-Davison, A. C., \& Hinkley, D. V. (1997). \emph{Bootstrap methods and their applications}. Cambridge: Cambridge University Press. Retrieved from \url{http://statwww.epfl.ch/davison/BMA/}
-
-\leavevmode\hypertarget{ref-R-Rcpp_b}{}%
-Eddelbuettel, D., \& Balamuta, J. J. (2017). Extending extitR with extitC++: A Brief Introduction to extitRcpp. \emph{PeerJ Preprints}, \emph{5}, e3188v1. \url{https://doi.org/10.7287/peerj.preprints.3188v1}
-
-\leavevmode\hypertarget{ref-R-Rcpp_a}{}%
-Eddelbuettel, D., \& François, R. (2011). Rcpp: Seamless R and C++ integration. \emph{Journal of Statistical Software}, \emph{40}(8), 1--18. \url{https://doi.org/10.18637/jss.v040.i08}
-
-\leavevmode\hypertarget{ref-R-mvtnorm}{}%
-Genz, A., \& Bretz, F. (2009). \emph{Computation of multivariate normal and t probabilities}. Heidelberg: Springer-Verlag.
-
-\leavevmode\hypertarget{ref-R-bootES}{}%
-Gerlanc, D., \& Kirby, K. (2015). \emph{BootES: Bootstrap effect sizes}. Retrieved from \url{https://CRAN.R-project.org/package=bootES}
-
 \leavevmode\hypertarget{ref-Goh_2016_mini}{}%
 Goh, J. X., Hall, J. A., \& Rosenthal, R. (2016). Mini meta-analysis of your own studies: Some arguments on why and a primer on how. \emph{Social and Personality Psychology Compass}, \emph{10}(10), 535--549. Journal Article. \url{https://doi.org/10.1111/spc3.12267}
-
-\leavevmode\hypertarget{ref-R-Hmisc}{}%
-Harrell Jr, F. E., Charles Dupont, \& others. (2019). \emph{Hmisc: Harrell miscellaneous}. Retrieved from \url{https://CRAN.R-project.org/package=Hmisc}
-
-\leavevmode\hypertarget{ref-R-purrr}{}%
-Henry, L., \& Wickham, H. (2019). \emph{Purrr: Functional programming tools}. Retrieved from \url{https://CRAN.R-project.org/package=purrr}
-
-\leavevmode\hypertarget{ref-R-ggstance}{}%
-Henry, L., Wickham, H., \& Chang, W. (2018). \emph{Ggstance: Horizontal 'ggplot2' components}. Retrieved from \url{https://CRAN.R-project.org/package=ggstance}
-
-\leavevmode\hypertarget{ref-R-TH.data}{}%
-Hothorn, T. (2019). \emph{TH.data: TH's data archive}. Retrieved from \url{https://CRAN.R-project.org/package=TH.data}
-
-\leavevmode\hypertarget{ref-R-multcomp}{}%
-Hothorn, T., Bretz, F., \& Westfall, P. (2008). Simultaneous inference in general parametric models. \emph{Biometrical Journal}, \emph{50}(3), 346--363.
 
 \leavevmode\hypertarget{ref-Hu_2018_JASP}{}%
 Hu, C.-P., Kong, X.-Z., Wagenmakers, E.-J., Ly, A., \& Peng, K. (2018). Bayes factor and its implementation in jasp: A practical primer (in chinese). \emph{Advances in Psychological Science}, \emph{26}(6), 951--965. Journal Article. \url{https://doi.org/10.3724/SP.J.1042.2018.00951}
@@ -450,113 +405,26 @@ Hu, C.-P., Kong, X.-Z., Wagenmakers, E.-J., Ly, A., \& Peng, K. (2018). Bayes fa
 \leavevmode\hypertarget{ref-Hu_2020_GoodSelf}{}%
 Hu, C.-P., Lan, Y., Macrae, C. N., \& Sui, J. (2020). Good me bad me: Does valence influence self-prioritization during perceptual decision-making? \emph{Collabra: Psychology}, \emph{6}(1), 20. Journal Article. \url{https://doi.org/10.1525/collabra.301}
 
-\leavevmode\hypertarget{ref-R-ggformula}{}%
-Kaplan, D., \& Pruim, R. (2019). \emph{Ggformula: Formula interface to the grammar of graphics}. Retrieved from \url{https://CRAN.R-project.org/package=ggformula}
-
-\leavevmode\hypertarget{ref-R-MBESS}{}%
-Kelley, K. (2018). \emph{MBESS: The mbess r package}. Retrieved from \url{https://CRAN.R-project.org/package=MBESS}
-
 \leavevmode\hypertarget{ref-Lakens_2013}{}%
 Lakens, D. (2013). Calculating and reporting effect sizes to facilitate cumulative science: A practical primer for t-tests and anovas. \emph{Frontiers in Psychology}, \emph{4}, 863. Journal Article. \url{https://doi.org/10.3389/fpsyg.2013.00863}
-
-\leavevmode\hypertarget{ref-R-emmeans}{}%
-Lenth, R. (2019). \emph{Emmeans: Estimated marginal means, aka least-squares means}. Retrieved from \url{https://CRAN.R-project.org/package=emmeans}
-
-\leavevmode\hypertarget{ref-R-lsmeans}{}%
-Lenth, R. V. (2016). Least-squares means: The R package lsmeans. \emph{Journal of Statistical Software}, \emph{69}(1), 1--33. \url{https://doi.org/10.18637/jss.v069.i01}
 
 \leavevmode\hypertarget{ref-Liu_2020_JOPD}{}%
 Liu, Q., Wang, F., Yan, W., Peng, K., Sui, J., \& Hu, C.-P. (2020). Questionnaire data from the revision of a chinese version of free will and determinism plus scale. \emph{Journal of Open Psychology Data}, \emph{8}(1), 1. Journal Article. \url{https://doi.org/10.5334/jopd.49/}
 
-\leavevmode\hypertarget{ref-R-BayesFactor}{}%
-Morey, R. D., \& Rouder, J. N. (2018). \emph{BayesFactor: Computation of bayes factors for common designs}. Retrieved from \url{https://CRAN.R-project.org/package=BayesFactor}
-
-\leavevmode\hypertarget{ref-R-here}{}%
-Müller, K. (2017). \emph{Here: A simpler way to find your files}. Retrieved from \url{https://CRAN.R-project.org/package=here}
-
-\leavevmode\hypertarget{ref-R-tibble}{}%
-Müller, K., \& Wickham, H. (2019). \emph{Tibble: Simple data frames}. Retrieved from \url{https://CRAN.R-project.org/package=tibble}
-
-\leavevmode\hypertarget{ref-R-RColorBrewer}{}%
-Neuwirth, E. (2014). \emph{RColorBrewer: ColorBrewer palettes}. Retrieved from \url{https://CRAN.R-project.org/package=RColorBrewer}
-
-\leavevmode\hypertarget{ref-R-ggstatsplot}{}%
-Patil, I., \& Powell, C. (2018). \emph{Ggstatsplot: 'Ggplot2' based plots with statistical details}. \url{https://doi.org/10.5281/zenodo.2074621}
-
 \leavevmode\hypertarget{ref-Pelli_1997}{}%
 Pelli, D. G. (1997). The videotoolbox software for visual psychophysics: Transforming numbers into movies. \emph{Spatial Vision}, \emph{10}(4), 437--442. Journal Article.
-
-\leavevmode\hypertarget{ref-R-coda}{}%
-Plummer, M., Best, N., Cowles, K., \& Vines, K. (2006). CODA: Convergence diagnosis and output analysis for mcmc. \emph{R News}, \emph{6}(1), 7--11. Retrieved from \url{https://journal.r-project.org/archive/}
-
-\leavevmode\hypertarget{ref-R-mosaicData}{}%
-Pruim, R., Kaplan, D., \& Horton, N. (2018). \emph{MosaicData: Project mosaic data sets}. Retrieved from \url{https://CRAN.R-project.org/package=mosaicData}
-
-\leavevmode\hypertarget{ref-R-mosaic}{}%
-Pruim, R., Kaplan, D. T., \& Horton, N. J. (2017). The mosaic package: Helping students to 'think with data' using r. \emph{The R Journal}, \emph{9}(1), 77--102. Retrieved from \url{https://journal.r-project.org/archive/2017/RJ-2017-024/index.html}
-
-\leavevmode\hypertarget{ref-R-base}{}%
-R Core Team. (2018). \emph{R: A language and environment for statistical computing}. Vienna, Austria: R Foundation for Statistical Computing. Retrieved from \url{https://www.R-project.org/}
-
-\leavevmode\hypertarget{ref-R-psych}{}%
-Revelle, W. (2018). \emph{Psych: Procedures for psychological, psychometric, and personality research}. Evanston, Illinois: Northwestern University. Retrieved from \url{https://CRAN.R-project.org/package=psych}
-
-\leavevmode\hypertarget{ref-R-lattice}{}%
-Sarkar, D. (2008). \emph{Lattice: Multivariate data visualization with r}. New York: Springer. Retrieved from \url{http://lmdvr.r-forge.r-project.org}
 
 \leavevmode\hypertarget{ref-Simmons_2013_life}{}%
 Simmons, J. P., Nelson, L. D., \& Simonsohn, U. (2013). Life after p-hacking. Conference Proceedings. \url{https://doi.org/10.2139/ssrn.2205186}
 
-\leavevmode\hypertarget{ref-R-afex}{}%
-Singmann, H., Bolker, B., Westfall, J., \& Aust, F. (2019). \emph{Afex: Analysis of factorial experiments}. Retrieved from \url{https://CRAN.R-project.org/package=afex}
-
 \leavevmode\hypertarget{ref-Sui_2012_JEPHPP}{}%
 Sui, J., He, X., \& Humphreys, G. W. (2012). Perceptual effects of social salience: Evidence from self-prioritization effects on perceptual matching. \emph{Journal of Experimental Psychology: Human Perception and Performance}, \emph{38}(5), 1105--1117. Journal Article. \url{https://doi.org/10.1037/a0029792}
-
-\leavevmode\hypertarget{ref-R-survival-book}{}%
-Terry M. Therneau, \& Patricia M. Grambsch. (2000). \emph{Modeling survival data: Extending the Cox model}. New York: Springer.
-
-\leavevmode\hypertarget{ref-R-MASS}{}%
-Venables, W. N., \& Ripley, B. D. (2002). \emph{Modern applied statistics with s} (Fourth). New York: Springer. Retrieved from \url{http://www.stats.ox.ac.uk/pub/MASS4}
 
 \leavevmode\hypertarget{ref-Wagenmakers_2018_JASP}{}%
 Wagenmakers, E.-J., Love, J., Marsman, M., Jamil, T., Ly, A., Verhagen, J., \ldots{} Morey, R. D. (2018). Bayesian inference for psychology. Part ii: Example applications with jasp. \emph{Psychonomic Bulletin \& Review}, \emph{25}(1), 58--76. Journal Article. \url{https://doi.org/10.3758/s13423-017-1323-7}
 
-\leavevmode\hypertarget{ref-R-corrplot2017}{}%
-Wei, T., \& Simko, V. (2017). \emph{R package "corrplot": Visualization of a correlation matrix}. Retrieved from \url{https://github.com/taiyun/corrplot}
-
-\leavevmode\hypertarget{ref-R-reshape2}{}%
-Wickham, H. (2007). Reshaping data with the reshape package. \emph{Journal of Statistical Software}, \emph{21}(12), 1--20. Retrieved from \url{http://www.jstatsoft.org/v21/i12/}
-
-\leavevmode\hypertarget{ref-R-plyr}{}%
-Wickham, H. (2011). The split-apply-combine strategy for data analysis. \emph{Journal of Statistical Software}, \emph{40}(1), 1--29. Retrieved from \url{http://www.jstatsoft.org/v40/i01/}
-
-\leavevmode\hypertarget{ref-R-ggplot2}{}%
-Wickham, H. (2016). \emph{Ggplot2: Elegant graphics for data analysis}. Springer-Verlag New York. Retrieved from \url{https://ggplot2.tidyverse.org}
-
-\leavevmode\hypertarget{ref-R-tidyverse}{}%
-Wickham, H. (2017). \emph{Tidyverse: Easily install and load the 'tidyverse'}. Retrieved from \url{https://CRAN.R-project.org/package=tidyverse}
-
-\leavevmode\hypertarget{ref-R-forcats}{}%
-Wickham, H. (2019a). \emph{Forcats: Tools for working with categorical variables (factors)}. Retrieved from \url{https://CRAN.R-project.org/package=forcats}
-
-\leavevmode\hypertarget{ref-R-stringr}{}%
-Wickham, H. (2019b). \emph{Stringr: Simple, consistent wrappers for common string operations}. Retrieved from \url{https://CRAN.R-project.org/package=stringr}
-
-\leavevmode\hypertarget{ref-R-dplyr}{}%
-Wickham, H., François, R., Henry, L., \& Müller, K. (2019). \emph{Dplyr: A grammar of data manipulation}. Retrieved from \url{https://CRAN.R-project.org/package=dplyr}
-
-\leavevmode\hypertarget{ref-R-tidyr}{}%
-Wickham, H., \& Henry, L. (2019). \emph{Tidyr: Easily tidy data with 'spread()' and 'gather()' functions}. Retrieved from \url{https://CRAN.R-project.org/package=tidyr}
-
-\leavevmode\hypertarget{ref-R-readr}{}%
-Wickham, H., Hester, J., \& Francois, R. (2018). \emph{Readr: Read rectangular text data}. Retrieved from \url{https://CRAN.R-project.org/package=readr}
-
 \leavevmode\hypertarget{ref-wiecki_hddm_2013}{}%
 Wiecki, T. V., Sofer, I., \& Frank, M. J. (2013). HDDM: Hierarchical bayesian estimation of the drift-diffusion model in python. \emph{Frontiers in Neuroinformatics}, \emph{7}. \url{https://doi.org/10.3389/fninf.2013.00014}
-
-\leavevmode\hypertarget{ref-R-Formula}{}%
-Zeileis, A., \& Croissant, Y. (2010). Extended model formulas in R: Multiple parts and multiple responses. \emph{Journal of Statistical Software}, \emph{34}(1), 1--13. \url{https://doi.org/10.18637/jss.v034.i01}
 
 \endgroup
 
